[package]
authors = ["Nexus Labs"]
edition = "2018"
name = "nexus-prism-autocompounder"
version = "0.1.3"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
integration_tests_build = ["nexus-prism-protocol/integration_tests_build"]

[dependencies]
astroport = "1.0.1"
cosmwasm-bignumber = "2.2.0"
cosmwasm-std = "0.16.7"
cosmwasm-storage = "0.16.7"
cw-storage-plus = "0.9.1"
cw0 = "0.9.1"
cw2 = "0.9.1"
cw20 = "0.9.1"
cw20-base = {version = "0.9.1", features = ["library"]}
nexus-prism-protocol = {path = "../../packages/nexus-prism-protocol"}
num_enum = "0.5.7"
protobuf = {version = "2.27.1", features = ["with-bytes"]}
schemars = "0.8.8"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
terra-cosmwasm = "2.2.0"

[dev-dependencies]
cosmwasm-schema = "0.16.7"
