[package]
authors = ["Nexus Labs"]
edition = "2018"
name = "nexus-prism-staking"
version = "0.1.4"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
integration_tests_build = ["nexus-prism-protocol/integration_tests_build"]

[dependencies]
astroport = "1.0.1"
cosmwasm-bignumber = "2.2.0"
cosmwasm-std = "0.16.7"
cw-storage-plus = "0.9.1"
cw0 = "0.9.1"
cw2 = "0.9.1"
cw20 = "0.9.1"
nexus-prism-protocol = {path = "../../packages/nexus-prism-protocol"}
num_enum = "0.5.7"
prism-protocol = {git = "https://github.com/prism-finance/prism-contracts"}
schemars = "0.8.8"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "0.16.7"
cosmwasm-storage = "0.16.7"
