[package]
authors = ["Nexus Labs"]
edition = "2018"
name = "nexus-prism-vault"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
integration_tests_build = ["nexus-prism-protocol/integration_tests_build"]

[dependencies]
astroport = "1.0.1"
cosmwasm-bignumber = "2.2.0"
cosmwasm-std = {version = "0.16.3", features = ["iterator"]}
cw-storage-plus = "0.9.1"
cw0 = "0.9.1"
cw2 = "0.9.1"
cw20 = "0.9.1"
cw20-base = {version = "0.9.1", features = ["library"]}
nexus-prism-protocol = {path = "../../packages/nexus-prism-protocol"}
prism-protocol = {git = "https://github.com/prism-finance/prism-contracts"}
protobuf = {version = "2.27.1", features = ["with-bytes"]}
schemars = "0.8.8"
serde = {version = "1.0.136", default-features = false, features = ["derive"]}
thiserror = "1.0.30"

[dev-dependencies]
cosmwasm-schema = "0.16.3"
cosmwasm-storage = {version = "0.16.3", features = ["iterator"]}
